@@ -35,10 +35,10 @@ switch ($modx->event->name) {
         }
         break;
     case 'OnBeforeManagerPageInit':
-        if ($modx->getOption('use_editor',null,false)) {
-            $html = $tiny->initialize();
-            $modx->event->output($html);
-        }
+        //if ($modx->getOption('use_editor',null,false)) {
+        //    $html = $tiny->initialize();
+        //    $modx->event->output($html);
+        //}
         break;
     case 'OnRichTextBrowserInit':
         if ($modx->getOption('use_editor',null,false)) {
